force-app/main/default/objects/Propfocus_Call_Log__c/Propfocus_Call_Log__c.object-meta.xml
<CustomObject>
    <label>Propfocus Call Log</label>
    <nameField>
        <displayFormat>PCL-{000000}</displayFormat>
        <label>Call Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Propfocus Call Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>