force-app/main/default/objects/Propfocus_Call_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Propfocus Call Logs (Opportunity)</relationshipLabel>
    <relationshipName>PropfocusOppCallLogs</relationshipName>
    <type>Lookup</type>
</CustomField>